# lookyloo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  3rdparty.sh  Dockerfile  LICENSE  Pipfile  README.md  SECURITY.md  code_of_conduct.md  docker-compose.dev.yml  docker-compose.yml  lookyloo.ini  mypy.ini  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/: config.yml  dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_fix_template.md  bug_fix_template.yml  config.yml  documentation_change_template.md  documentation_change_template.yml  freetext.yml  new_feature_template.md  new_feature_template.yml
.github/issues_templates.md/: documentation_change_template.md
.github/workflows/: codeql-analysis.yml  codeql.yml  docker-publish.yml  dockerimage.yml  instance_test.yml  mypy.yml  nosetests.yml
cache/: cache.conf  run_redis.sh  shutdown_redis.sh
client/: README.md  pyproject.toml  setup.py
client/pylookyloo/: __init__.py  api.py
config/: email.tmpl  generic.json.sample  logging.json.sample  logging_web.json.sample  mastobot.json.sample  modules.json.sample  takedown_filters.ini.sample  tt_readme.tmpl
config/cloudflare/: last_updates.json
config/users/: admin.json.sample  user.json.sample
doc/: install_notes.md  notes_papers.md
doc/img_sources/: arrow.xcf
etc/logrotate.d/: aquarium  lookyloo
etc/nginx/sites-available/: lookyloo
etc/systemd/system/: aquarium.service.sample  lookyloo.service  lookyloo.service.sample
full_index/: kvrocks.conf  run_kvrocks.sh
indexing/: indexing.conf  run_redis.sh  shutdown_redis.sh
known_content/: generic.json  legitimate.json  malicious.json
kvrocks_index/: kvrocks.conf  run_kvrocks.sh
lookyloo/: __init__.py  abstractmanager.py  capturecache.py  comparator.py  context.py  exceptions.py  helpers.py  indexing.py  lookyloo.py  modules.py
lookyloo/default/: __init__.py  abstractmanager.py  exceptions.py  helpers.py
lookyloo/ete3_webserver/: __init__.py  tree_handler.py
lookyloo/modules/: __init__.py  abstractmodule.py  ail.py  assemblyline.py  auto_categorize.py  circlpdns.py  cloudflare.py  fox.py  hashlookup.py  misp.py  ollama_report.py  pandora.py  phishtank.py  pi.py  riskiq.py  sanejs.py  urlhaus.py  urlscan.py  uwhois.py  vt.py
lookyloo/static/: ete.css  ete.js  tree.css  tree.js
lookyloo/templates/: index.html  main.html  scrap.html  scrape.html  tree.html
tests/: test_generic.py
tools/: 3rdparty.py  README.md  change_captures_dir.py  check_s3fs_entry.py  expire_cache.py  generate_meta_file.py  generate_sri.py  manual_parse_ua_list.py  monitoring.py  rebuild_caches.py  remove_capture.py  show_known_devices.py  stats.py  update_cloudflare_lists.py  validate_config_files.py
tools/create_archive_indexes/: create_indexes.py  pyproject.toml  readme.md
user_agents/2019/05/: 2019-05-27.json
user_agents/2019/11/: 2019-11-23.json
user_agents/2020/02/: 2020-02-28.json
user_agents/2020/06/: 2020-06-25.json
user_agents/2020/08/: 2020-08-24.json
user_agents/2020/11/: 2020-11-10.json
user_agents/2021/01/: 2021-01-12.json
user_agents/2021/02/: 2021-02-10.json
user_agents/2021/04/: 2021-04-02.json
user_agents/2021/05/: 2021-05-26.json
user_agents/2021/06/: 2021-06-29.json
user_agents/2021/07/: 2021-07-21.json
user_agents/2021/08/: 2021-08-27.json
user_agents/2022/04/: 2022-04-25.json
user_agents/2022/06/: 2022-06-09.json
user_agents/2025/07/: 2025-07-06.json
user_agents/2025/10/: 2025-10-28.json
user_agents/2025/11/: 2025-11-17.json
user_agents/2025/12/: 2025-12-02.json
website/: 3rdparty.sh
website/web/: __init__.py  default_csp.py  genericapi.py  helpers.py  proxied.py  sri.txt
website/web/static/: capture.js  generic.css  generic.js  hostname_popup.js  hostnode_modals.js  index.css  render_tables.js  scrape.js  stats.css  stats_graph.js  tree.css  tree.js  tree_modals.js
website/web/templates/: body_hash.html  bulk_captures.html  capture.html  categories.html  categories_capture.html  categories_view.html  cookie_name.html  cookies.html  domain.html  download_elements.html  downloads.html  error.html  favicon_details.html  favicons.html  hash_type_details.html  hashlookup.html  hhh_details.html  hhhashes.html  historical_lookups.html  hostname.html  hostname_popup.html  identifier_details.html  index.html  ip.html  macros.html  main.html  misp_lookup.html  misp_push_view.html  modules.html  ollama_report.html  prettify_text.html  ressources.html  scrape.html  search.html  simple_capture.html  statistics.html  stats.html  storage.html  submit_capture.html  tld.html  (+12 more)
