[project]
name = "lookyloo"
version = "1.37.0"
description = "Web interface to track the trackers."
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
repository = "https://github.com/Lookyloo/lookyloo"
homepage = "https://www.lookyloo.eu"
documentation = "https://www.lookyloo.eu/docs/main/"
requires-python = ">=3.10,<3.14"

readme = "README.md"

dynamic = [ "dependencies", "classifiers" ]

[tool.poetry]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet'
]


[project.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
async_capture = "bin.async_capture:main"
background_indexer = "bin.background_indexer:main"
background_build_captures = "bin.background_build_captures:main"
background_full_indexer = "bin.background_indexer:main_full_indexer"
archiver = "bin.archiver:main"
processing = "bin.background_processing:main"
start_website = "bin.start_website:main"
scripts_controller = "bin.scripts_controller:main"
mastobot = "bin.mastobot:main"


[tool.poetry.dependencies]
assemblyline_client = "^4.9.9"
requests = "^2.32.5"
flask = "^3.1.3"
gunicorn = {version = "^25.1.0", extras = ["setproctitle"]}
charset-normalizer = "^3.4.4"
redis = {version = "^5.3.0,<6.0", extras = ["hiredis"]}
beautifulsoup4 = {version = "^4.14.3", extras = ["lxml", "charset_normalizer"]}
bootstrap-flask = "^2.5.0"
defang = "^0.5.3"
vt-py = "^0.22.0"
pyeupi = "^1.3.0"
pysanejs = "^2.0.5"
pylookyloo = "^1.36.3"
dnspython = "^2.8.0"
pytaxonomies = "^2.1.0"
pymisp = {version = "^2.5.32.3", extras = ["fileobjects"]}
Pillow = "^12.1.1"
flask-restx = "^1.3.2"
rich = "^14.3.3"
pyphishtanklookup = "^1.5.1"
Flask-Cors = "^6.0.2"
pyhashlookup = "^1.2.8"
lief = "^0.17.4"
ua-parser = {extras = ["regex"], version = "^1.0.1"}
Flask-Login = "^0.6.3"
har2tree = "^1.36.7"
werkzeug = "^3.1.6"
filetype = "^1.2.0"
pypandora = "^1.11.0"
lacuscore = "^1.21.3"
pylacus = "^1.21.3"
pyipasnhistory = "^2.1.5"
chardet = "^5.2.0"
pysecuritytxt = "^1.3.3"
pylookyloomonitoring = "^1.2.0"
s3fs = "^2026.2.0"
urllib3 = "^2.6.3"
pypdns = "^2.3.2"
mmh3 = "^5.2.0"
puremagic = "^1.30"
psutil = "^7.2.2"
flask-talisman = "^1.1.0"

aiohttp = {extras = ["speedups"], version = "^3.13.3"}
pyail = "^0.0.11"
mastodon-py = "^2.1.4"
typing-extensions = {version = "^4.15.0", python = "<3.12"}
rfc3161-client = "^1.0.5"
orjson = "^3.11.7"
esprima = "^4.0.1"
pyfaup-rs = "^0.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pytest-playwright = "^0.7.2"
types-requests = "^2.32.4.20260107"
types-redis = {version = "^4.6.0.20241004"}
types-Deprecated = "^1.3.1.20260130"
types-python-dateutil = "^2.9.0.20260124"
types-beautifulsoup4 = "^4.12.0.20250516"
types-Pillow = "^10.2.0.20240822"
types-pytz = "^2025.2.0.20251108"
types-psutil = "^7.2.2.20260130"
types-lxml = "^2026.2.16"
gitpython = "^3.1.46"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
