[project]
name = "lookyloo"
version = "1.39.1"
description = "Web interface to track the trackers."
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
repository = "https://github.com/Lookyloo/lookyloo"
homepage = "https://www.lookyloo.eu"
documentation = "https://www.lookyloo.eu/docs/main/"
requires-python = ">=3.10,<3.15"

readme = "README.md"

dynamic = [ "dependencies", "classifiers" ]

[tool.poetry]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet'
]


[project.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
async_capture = "bin.async_capture:main"
background_indexer = "bin.background_indexer:main"
background_build_captures = "bin.background_build_captures:main"
background_full_indexer = "bin.background_indexer:main_full_indexer"
archiver = "bin.archiver:main"
processing = "bin.background_processing:main"
start_website = "bin.start_website:main"
scripts_controller = "bin.scripts_controller:main"
mastobot = "bin.mastobot:main"


[tool.poetry.dependencies]
assemblyline_client = "^4.9.9"
requests = "^2.34.2"
flask = "^3.1.3"
gunicorn = {version = "^26.0.0", extras = ["setproctitle"]}
redis = {version = "^5.3.0,<6.0", extras = ["hiredis"]}
beautifulsoup4 = {version = "^4.14.3", extras = ["lxml", "charset_normalizer"]}
bootstrap-flask = "^2.5.0"
defang = "^0.5.3"
vt-py = "^0.22.0"
pyeupi = "^1.3.0"
pysanejs = "^2.0.5"
pylookyloo = "^1.39.1"
dnspython = "^2.8.0"
pytaxonomies = "^2.1.0"
pymisp = {version = "^2.5.34.1", extras = ["fileobjects"]}
Pillow = "^12.2.0"
flask-restx = "^1.3.2"
rich = "^15.0.0"
pyphishtanklookup = "^1.5.2"
Flask-Cors = "^6.0.2"
pyhashlookup = "^1.2.8"
ua-parser = {extras = ["regex"], version = "^1.0.2"}
Flask-Login = "^0.6.3"
har2tree = "^1.39.0"
werkzeug = "^3.1.8"
filetype = "^1.2.0"
pypandora = "^1.12.0"
lacuscore = "^1.24.7"
pylacus = "^1.24.4"
pyipasnhistory = "^2.1.5"
pysecuritytxt = "^1.3.3"
pylookyloomonitoring = "^1.3.5"
s3fs = "^2026.4.0"
pypdns = "^2.3.2"
mmh3 = "^5.2.1"
psutil = "^7.2.2"
flask-talisman = "^1.1.0"

aiohttp = {extras = ["speedups"], version = "^3.13.5"}
pyail = "^0.0.13"
mastodon-py = "^2.2.1"
rfc3161-client = "^1.0.6"
orjson = "^3.11.9"
esprima = "^4.0.1"
pyfaup-rs = "^0.4.9"
pure-magic-rs = "^0.3.4"
html-to-markdown = "^3.4.0"
dateparser = "^1.4.0"
lookyloo-models = "^0.2.7"
lxml = "^6.1.0"
playwrightcapture = "^1.39.11"
cryptography = "^48.0.0"
certifi = "^2026.4.22"
pydantic = "^2.13.4"
markupsafe = "^3.0.3"
yara-x = "^1.16.0"

[tool.poetry.group.dev.dependencies]
mypy = "^2.1.0"
pytest-playwright = "^0.8.0"
types-requests = "^2.33.0.20260518"
types-redis = {version = "^4.6.0.20241004"}
types-Deprecated = "^1.3.1.20260508"
types-python-dateutil = "^2.9.0.20260518"
types-beautifulsoup4 = "^4.12.0.20250516"
types-Pillow = "^10.2.0.20240822"
types-pytz = "^2026.2.0.20260518"
types-psutil = "^7.2.2.20260518"
types-lxml = "^2026.2.16"
gitpython = "^3.1.50"
types-dateparser = "^1.4.0.20260518"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
