[tool.poetry]
name = "pylookyloo"
version = "0.1.0"
description = "Python client for Lookyloo"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/CIRCL/lookyloo/client"

classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
    'Topic :: Internet',
]

[tool.poetry.scripts]
lookyloo = "bin/lookyloo"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
