[tool.poetry]
name = "pylookyloo"
version = "0.6"
description = "Python client for Lookyloo"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/CIRCL/lookyloo/client"

readme = "README.md"

classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Security',
    'Topic :: Internet',
]

include = ['README.md']

[tool.poetry.scripts]
lookyloo = 'pylookyloo:main'

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
