[tool.poetry]
name = "lookyloo_archive_index_updater"
version = "1.0"
description = "Temporary script to create/update index files of archived captures."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
s3fs = "^2023.10.0"

[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
